website/versioned_docs/version-0.5.2/introduction.md
---
id: version-0.5.2-introduction
title: Introduction
original_id: introduction
---

Hot Chocolate is a new .NET GraphQL server platform that can help you build a GraphQL layer over your existing and new infrastructure.

Our API will let you start very quickly with pre-built templates that let you start in seconds.

## Features

1. Code-first approach

    Use C# to define your schema in a strong typed way.

    [Learn more](code-first.md)

1. Schema-first approach

    Use the GraphQL syntax to define your schema and bind simple methods or whole types to your GraphQL types.

    [Learn more](schema-first.md)

1. Custom Scalar Types

    Define your own scalar types to make your schemas even richer.

    [Learn more](custom-scalar-types.md)

1. Support for data loader

    We have baked-in support for data loaders which makes batching and caching for faster query requests a breeze.

    [Learn more](dataloaders.md)

1. dotnet CLI Templates

    In order to get you even faster started we are providing templates for the dotnet CLI which lets you setup a .NET GraphQL server in les than 10 seconds.

    [Learn more](dotnet-cli.md)
